# Spanforge-Core

./: .gitignore  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONFORMANCE.md  MAINTAINERS.md  PRICING.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SpanForge_v1.1_Addendum.docx  SpanForge_v1.1_Spec.docx  TRUST_Framework_v2_2 (1).docx  TheSpanforgeWay_v4_9 (1).docx  docker-compose.selfhosted.yml  fix_duplicate.py  mypy_errors.txt  patch_exceptions.py  pyproject.toml  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  rfc.yml
.github/workflows/: ci.yml  release.yml
.sf-gate/artifacts/: gate6_trust_result.json  test-gate_result.json
docs/: changelog.md  cli.md  conf.py  configuration.md  contributing.md  index.md  installation.md  quickstart.md  runbook.md  schema-versioning.md
docs/api/: alert.md  audit.md  auto.md  cache.md  cec.md  compliance.md  config.md  consumer.md  debug.md  deprecations.md  enterprise.md  eval.md  event.md  exceptions.md  export.md  gate.md  governance.md  hooks.md  http.md  index.md  integrations.md  io.md  lint.md  metrics.md  migrate.md  models.md  normalizer.md  observe.md  pii.md  pipelines.md  plugins.md  redact.md  regression.md  schema.md  sdk-reference.md  secrets.md  signing.md  stats.md  store.md  stream.md  (+7 more)
docs/deployment/: air-gapped.md  kubernetes.md
docs/integrations/: crewai.md  halluccheck.md
docs/migrations/: from-langfuse.md  from-langsmith.md  from-openllmetry.md  v5-to-v6.md
docs/namespaces/: audit.md  cache.md  consent.md  cost.md  diff.md  eval.md  explanation.md  fence.md  guard.md  hitl.md  index.md  model_registry.md  prompt.md  redact_ns.md  template.md  trace.md
docs/rfc/: adr-index.md  rfc-0001.md
docs/schema/: README.md  envelope.schema.json
docs/schema/payloads/: agent-run.schema.json  agent-step.schema.json  audit.schema.json  cache.schema.json  consent.schema.json  cost.schema.json  diff.schema.json  eval.schema.json  explanation.schema.json  fence.schema.json  guard.schema.json  hitl.schema.json  model-registry.schema.json  prompt.schema.json  redact.schema.json  span.schema.json  template.schema.json
docs/schema/types/: common.schema.json
docs/user_guide/: alert.md  audit.md  cache.md  compliance.md  custom_exporters.md  debugging.md  events.md  export.md  gate.md  governance.md  index.md  linting.md  metrics.md  migration.md  redaction.md  signing.md  tracing.md
examples/: agent_workflow.py  budget_alert.py  langchain_chain.py  multi_agent_rag.py  multi_tenant.py  openai_chat.py  otlp_grafana.py  production_multi_agent.py  secure_pipeline.py  streaming_response.py  testing_mocks_example.py
examples/docker/: Dockerfile  docker-compose.yml  otel-config.yaml
examples/gates/: gate5_governance.yaml  sf-gate.yaml
helm/spanforge/: Chart.yaml  values.yaml
helm/spanforge/templates/: _helpers.tpl  deployment.yaml  service.yaml
src/spanforge/: __init__.py  _ansi.py  _batch_exporter.py  _cli.py  _hooks.py  _server.py  _span.py  _store.py  _stream.py  _trace.py  _tracer.py  actor.py  alerts.py  auto.py  baseline.py  config.py  consent.py  consumer.py  cost.py  debug.py  drift.py  egress.py  eval.py  event.py  exceptions.py  explain.py  gate.py  hitl.py  http.py  inspect.py  io.py  metrics.py  metrics_export.py  migrate.py  model_registry.py  models.py  normalizer.py  plugins.py  presidio_backend.py  processor.py  (+15 more)
src/spanforge/core/: __init__.py  compliance_mapping.py
src/spanforge/export/: __init__.py  append_only.py  cloud.py  datadog.py  grafana.py  jsonl.py  otel_bridge.py  otlp.py  otlp_bridge.py  redis_backend.py  webhook.py
src/spanforge/exporters/: __init__.py  console.py  jsonl.py
src/spanforge/integrations/: __init__.py  _pricing.py  anthropic.py  bedrock.py  crewai.py  gemini.py  groq.py  langchain.py  llamaindex.py  ollama.py  openai.py  together.py
src/spanforge/namespaces/: __init__.py  audit.py  cache.py  chain.py  confidence.py  consent.py  cost.py  decision.py  diff.py  drift.py  eval_.py  fence.py  guard.py  hitl.py  latency.py  prompt.py  redact.py  template.py  tool_call.py  trace.py
src/spanforge/schemas/v1.0/: schema.json
src/spanforge/schemas/v2.0/: schema.json
src/spanforge/sdk/: __init__.py  _base.py  _base.pyi  _exceptions.py  _types.py  alert.py  alert.pyi  audit.py  audit.pyi  cec.py  cec.pyi  config.py  config.pyi  enterprise.py  enterprise.pyi  fallback.py  gate.py  gate.pyi  identity.py  identity.pyi  observe.py  observe.pyi  pii.py  pii.pyi  pipelines.py  pipelines.pyi  registry.py  registry.pyi  secrets.py  secrets.pyi  security.py  security.pyi  trust.py  trust.pyi
tests/: conftest.py  test_actor.py  test_alerts.py  test_ansi.py  test_auto.py  test_baseline.py  test_benchmarks.py  test_budget_alert.py  test_cli.py  test_compliance_mapping.py  test_config_interpolate.py  test_consent.py  test_consumer.py  test_cost_event_emission.py  test_cost_tracker.py  test_costguard_gaps.py  test_drift.py  test_eval_behaviour_scorer.py  test_event.py  test_exceptions.py  test_explain.py  test_export_cloud.py  test_export_datadog.py  test_export_grafana.py  test_export_jsonl.py  test_export_otel_bridge.py  test_export_otlp.py  test_export_redis_backend.py  test_export_webhook.py  test_hitl.py  test_http.py  test_inspect.py  test_integration.py  test_integrations.py  test_io.py  test_migrate.py  test_model_registry.py  test_models.py  test_namespaces.py  test_otlp_bridge.py  (+58 more)
tests/conformance/: fixtures.json  run_conformance.py  test_conformance.py
tests/conformance/fixtures/: chain.json  compliance.json  key_security.json  migration.json  pii.json  signing.json
tests/integration/: test_dx_integration.py
