[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "spanforge"
version = "2.0.1"
description = "SpanForge — AI lifecycle and governance platform (RFC-0001 SPANFORGE)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "LLM Toolkit Team" }]
keywords = ["llm", "spanforge", "ai-compliance", "opentelemetry", "agentic-ai", "governance", "ai-lifecycle", "schema", "events"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
requires-python = ">=3.9"

# Core has ZERO required dependencies — stdlib only.
dependencies = []

[project.urls]
"Homepage" = "https://github.com/veerarag1973/spanforge"
"Documentation" = "https://github.com/veerarag1973/spanforge/blob/main/docs/index.md"
"Source" = "https://github.com/veerarag1973/spanforge"
"Bug Tracker" = "https://github.com/veerarag1973/spanforge/issues"
"Changelog" = "https://github.com/veerarag1973/spanforge/blob/main/docs/changelog.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",     # parallel test execution
    "pytest-benchmark>=4.0",  # performance regression tests
    "ruff>=0.4.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "hypothesis>=6.100",      # property-based testing
    "pydantic>=2.7",           # Phase 2: Pydantic model layer
    "httpx>=0.27",             # Phase 4: async webhook / OTLP HTTP
    "pytest-asyncio>=0.23",    # Phase 4: async test support
    "jsonschema>=4.21",        # Phase 5: JSON Schema validation (optional dep)
]
pydantic = ["pydantic>=2.7"]
# otel: enables OTelBridgeExporter — emits real OTel spans via a TracerProvider.
otel    = ["opentelemetry-sdk>=1.24"]
http    = ["httpx>=0.27"]
jsonschema = ["jsonschema>=4.21"]
# Phase 6: OpenAI integration
openai  = ["openai>=1.0"]
# Phase 7 provider integrations
anthropic = ["anthropic>=0.25"]
ollama    = ["ollama>=0.2"]
groq      = ["groq>=0.9"]
together  = ["together>=1.2"]
# Phase 10 provider integrations
gemini    = ["google-generativeai>=0.5"]
bedrock   = ["boto3>=1.34"]
# Phase 8 enterprise integrations
datadog = []   # DatadogExporter uses stdlib HTTP, no extra deps required
kafka   = ["kafka-python>=2.0"]
# Phase 9 framework integrations
langchain   = ["langchain-core>=0.2"]
llamaindex  = ["llama-index-core>=0.10"]
crewai      = ["crewai>=0.28"]
# Presidio PII detection backend
presidio    = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2"]
# Convenience bundle
all = [
    "pydantic>=2.7",
    "opentelemetry-sdk>=1.24",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "openai>=1.0",
    "anthropic>=0.25",
    "kafka-python>=2.0",
    "langchain-core>=0.2",
    "llama-index-core>=0.10",
    "crewai>=0.28",
    "redis>=4.0",
]
redis = ["redis>=4.0"]
# v1.0: compliance PDF reports
compliance = ["reportlab>=4.0"]
# v1.0: WORM backends for append-only exports
worm-s3  = ["boto3>=1.34"]
worm-gcs = ["google-cloud-storage>=2.14"]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
]

[project.scripts]
spanforge = "spanforge._cli:main"

[project.entry-points."flake8.extension"]
AO = "spanforge.lint._flake8:SpanForgeChecker"

# ---------------------------------------------------------------------------
# Hatch build
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/spanforge"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths     = ["tests"]
pythonpath    = ["src"]
addopts       = [
    "--strict-markers",
    "--tb=short",
    "-ra",
    "--cov=spanforge",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=90",
]
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that cross module boundaries",
    "perf: performance benchmarks",
    "security: security-focused tests",
]
filterwarnings = [
    "error",
    "ignore::coverage.exceptions.CoverageWarning",   # harmless module-not-measured during collection
    "ignore::ResourceWarning",                        # mock HTTPError objects trigger GC warnings in Python 3.14+
    "ignore::pytest.PytestUnraisableExceptionWarning", # __del__ resource cleanup from mock objects
]   # treat all warnings as errors except benign coverage instrumentation notices

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
branch   = true
source   = ["spanforge"]
omit     = [
    "src/spanforge/_cli.py",
    "src/spanforge/_server.py",
    "src/spanforge/metrics_export.py",
    "src/spanforge/_batch_exporter.py",
    "src/spanforge/eval.py",
    "src/spanforge/prompt_registry.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^\\s*\\.\\.\\.$",              # abstract method bodies
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
show_missing = true
fail_under   = 90

# Per-module minimums for security-critical and core paths.
# Add new entries here as coverage improves; never reduce existing values.
# To verify locally: pytest --cov=spanforge --cov-report=term-missing
[tool.coverage.paths]
source = ["src/spanforge", "spanforge"]

# ---------------------------------------------------------------------------
# Ruff — linting + formatting  (replaces flake8, isort, pyupgrade, bandit-lite)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length    = 100
src            = ["src/spanforge", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "TCH",       # flake8-type-checking
    "PTH",       # flake8-use-pathlib
    "RUF",       # Ruff-native rules
    "S",         # flake8-bandit (security)
    "ANN",       # flake8-annotations
    "D",         # pydocstyle
    "ERA",       # eradicate (commented-out code)
    "PL",        # pylint subset
    "PERF",      # perflint
    "TRY",       # tryceratops (exception anti-patterns)
]
ignore = [
    "D105",   # missing docstring in magic method (too verbose)
    "D107",   # missing docstring in __init__
    "ANN101", # missing type annotation for `self`
    "ANN102", # missing type annotation for `cls`
    "TRY003", # avoid long messages in raise — we intentionally add context
    "S101",   # use of assert — fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN", "D", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["spanforge"]

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version         = "3.9"
strict                 = true
warn_unused_ignores    = true
warn_redundant_casts   = true
warn_return_any        = true
disallow_any_generics  = true
disallow_untyped_defs  = true
no_implicit_reexport   = true
show_error_codes       = true
pretty                 = true
packages               = ["spanforge"]
